commenting a line that causes a bug on firefox

--- a/_elements.scss
+++ b/_elements.scss
@@ -16,7 +16,7 @@ a {
 //-------------------------------------
 
 .icon { fill: white }
-svg { fill: transparent }
+// svg { fill: transparent } //@TODO: this causes firefox to render the logo with transparent BG. Woot?!
 
 //-------------------------------------
 // Lists
